--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion "28.0.3"
     defaultConfig {
         applicationId "com.example.hp.applicationdrawer"
@@ -24,11 +24,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:27.+'
-    compile 'com.android.support:support-v4:27.+'
-    compile 'com.android.support:design:27.+'
+    compile 'com.android.support:appcompat-v7:28.+'
+    compile 'com.android.support:support-v4:28.+'
+    compile 'com.android.support:design:28.+'
+  //  compile 'com.android.support:recyclerview-v7:27.4.0'
+    //compile 'com.android.support:cardview-v7:27.3.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:recyclerview-v7:28.0.0'
+    compile 'com.android.support:cardview-v7:28.0.0'
+
 }
 allprojects {
     repositories {
